Docs: page 폴더 1deps 추가(페이지별 추가 컴포넌트 필요) , 전체적인 css 수정

--- a/src/style/layout.module.css
+++ b/src/style/layout.module.css
@@ -1,15 +1,21 @@
 .main {
   display: flex;
-  width: 80%;
+  margin: 0 auto;
+  width: 100%;
 }
 .main aside {
+  box-sizing: border-box;
   display: flex;
-  width: 30%;
+  padding-top: 3%;
+  padding-left: 3%;
+  width: 20%;
   flex-direction: column;
 }
 .main .container {
-  width: 70%;
+  width: 80%;
+  padding-bottom: 6%;
+  background-color: #EEE;
 }
-.main select {
+.main .select {
   width: 70%;
 }
