--- a/public/reset.css
+++ b/public/reset.css
@@ -1,8 +1,8 @@
 html,body{
   box-sizing: border-box;
   height: 100%;
-  font-size: 14px;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 13px;
+  font-family: 'Nanum Gothic', sans-serif;
 }  
 *{
   margin:0;
