--- a/src/style/layout.module.scss
+++ b/src/style/layout.module.scss
@@ -1,16 +1,22 @@
 .main {
   display: flex;
-  width: 80%;
+  margin: 0 auto;
+  width: 100%;
 
   aside {
+    box-sizing: border-box;
     display: flex;
-    width: 30%;
+    padding-top: 3%;
+    padding-left: 3%;
+    width: 20%;
     flex-direction: column;
   }
   .container {
-    width: 70%;
+    width: 80%;
+    padding-bottom: 6%;
+    background-color: #EEE;
   }
-  select{
+  .select{
     width: 70%;
   }
 }
